--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>広島大学 BMKセンター 質問紙サイト</title>
+    <title>広島大学 BMKセンター 調査サイト</title>
 </head>
 
 <body>
     <div class="header-banner">
         <div class="organization-name">広島大学 BMKセンター</div>
-        <div class="site-content">質問紙</div>
+        <div class="site-content">アンケート調査</div>
     </div>
     <div id="displayId" class="id-display"></div>
     <div class="container">
         <div id="buttonContainerTop" class="mt-3"></div>
-        <div id="buttonContainerRest" class="mt-3"></div>
+        <div id="buttonContainerRest" class="button-container mt-3"></div>
     </div>
     <script>
         function sendFormData() {
