--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                 console.error('Error fetching forms:', error.message);
                 return;
             }
-            for (let index = 0; index < forms.length; index++) {
-                const form = forms[index];
+
+            for (let index = 0; index < data.length; index++) {
+                const form = data[index];
                 const formId = extractFormId(form.form_url);
                 const container = index === 0 ? 'buttonContainerTop' : 'buttonContainerRest';
                 const updatedUrl = updateFormUrl(form.form_view_url, participantId);
