--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <div class="site-content">アンケート調査</div>
     </div>
     <div id="displayId" class="id-display"></div>
-    <div class="instructions mt-3">
-        <p>上から順番に回答してください。</p>
+    <div class="container">
+        <div class="instructions mt-3">
+            <p>上から順番に回答してください。</p>
+        </div>
     </div>
     <div class="container">
         <div id="buttonContainerTop" class="button-container mt-3"></div>
@@ -27,113 +29,7 @@
         <h3>連絡先</h3>
         <p>広島大学<br>脳・こころ・感性科学研究センター<br>○○<br>メール: <a href="mailto:example@example.com">example@example.com</a></p>
     </div>
-
-    <script>
-        const supabaseUrl = 'https://xrvqmewmdjzsxyiprxck.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhydnFtZXdtZGp6c3h5aXByeGNrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTk4MDgyNDYsImV4cCI6MjAzNTM4NDI0Nn0.pumkW0fPJgVaRX7WBosyCIsobhWTOGbetubwPGwBKuc';
-        const { createClient } = supabase
-        const _supabase = createClient(supabaseUrl, supabaseKey);
-
-        document.addEventListener('DOMContentLoaded', async function () {
-            let participantId = localStorage.getItem('responseId');
-            if (!participantId) {
-                participantId = await registerParticipant();
-                localStorage.setItem('responseId', participantId);
-            }
-            document.getElementById('displayId').textContent = 'Your ID: ' + participantId;
-            await fetchAndDisplayForms(participantId);
-        });
-
-        document.addEventListener('visibilitychange', async function () {
-            if (document.visibilityState === 'visible') {
-                const participantId = localStorage.getItem('responseId');
-                if (participantId) {
-                    updateButtonStyles(participantId);
-                }
-            }
-        });
-
-        async function registerParticipant() {
-            const { data, error } = await _supabase.from('responses').insert(
-                {
-                    user_agent: navigator.userAgent,
-                    screen_resolution: `${window.screen.width}x${window.screen.height}`,
-                    timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
-                    language: navigator.language,
-                    platform: navigator.platform
-                }).select('*');
-            if (error) {
-                console.error('Error:', error.message);
-                return;
-            }
-            const formattedId = "BMK_IP_" + ('000' + data[0].id).slice(-4);
-            return formattedId;
-        }
-
-        function updateFormUrl(formUrl, participantId) {
-            const url = new URL(formUrl);
-            const params = new URLSearchParams(url.search);
-            for (const [key, value] of params.entries()) {
-                if (key.startsWith('entry.')) {
-                    params.set(key, participantId);
-                }
-            }
-            url.search = params.toString();
-            return url.href;
-        }
-
-        async function fetchAndDisplayForms(participantId) {
-            const { data, error } = await _supabase.from('form_url_list_a2').select('*');
-            if (error) {
-                console.error('Error fetching forms:', error.message);
-                return;
-            }
-
-            for (let index = 0; index < data.length; index++) {
-                const form = data[index];
-                const formId = extractFormId(form.form_url);
-                const container = index === 0 ? 'buttonContainerTop' : 'buttonContainerRest';
-                const updatedUrl = updateFormUrl(form.form_view_url, participantId);
-                addButton(updatedUrl, form.button_name, container, formId);
-            };
-            updateButtonStyles(participantId);
-        }
-
-        function addButton(link, label, containerId, formId) {
-            const container = document.getElementById(containerId);
-            const button = document.createElement('a');
-            button.href = link;
-            button.target = "_blank";
-            button.className = 'btn btn-lg btn-primary';
-            button.textContent = label;
-            button.dataset.formId = formId;
-            container.appendChild(button);
-        }
-
-        async function updateButtonStyles(participantId) {
-            const buttons = document.querySelectorAll('a[data-form-id]');
-            for (const button of buttons) {
-                const formId = button.dataset.formId;
-                const isCompleted = await checkCompleted(participantId, formId);
-                button.className = `btn btn-lg ${isCompleted ? 'btn-success' : 'btn-primary'}`;
-            }
-        }
-
-        async function checkCompleted(participantId, formId) {
-            const { data, error } = await _supabase.from('completed_responses').select('*').match({ participant_id: participantId, form_id: formId });
-            if (error) {
-                console.error('Error checking completion status:', error.message);
-                return false;
-            }
-            return data.length > 0;
-        }
-
-        function extractFormId(url) {
-            const match = url.match(/\/d\/(.+?)\//);
-            return match ? match[1] : null;
-        }
-    </script>
-
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
