--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <div class="site-content">アンケート調査</div>
     </div>
     <div id="displayId" class="id-display"></div>
-    <div class="container">
-        <div class="instructions mt-3">
-            <p>上から順番に回答してください。</p>
+    <div class="background">
+        <div class="container main-content">
+            <div class="instructions mt-3">
+                <p>上から順番に回答してください。</p>
+            </div>
+            <div id="buttonContainerTop" class="button-container mt-3"></div>
+            <div id="buttonContainerRest" class="button-container mt-3"></div>
         </div>
-    </div>
-    <div class="container">
-        <div id="buttonContainerTop" class="button-container mt-3"></div>
-        <div id="buttonContainerRest" class="button-container mt-3"></div>
     </div>
     <div class="contact-info">
         <h3>連絡先</h3>
