Adding experimenter settings and passwords

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             </div>
         </div>
     </div>
+    <div id="developerSettings" style="display: none;">
+        <div class="developer-settings-content">
+            <h4>実験者用設定</h4>
+            <button id="newIdButton">新規ID取得</button>
+            <select id="idSelect">
+                <option>-</option>
+            </select>
+        </div>
+    </div>
+
     <div class="contact-info">
         <h3>連絡先</h3>
         <p>広島大学<br>保健管理センター，脳・こころ・感性科学研究センター<br>准教授 吉野敦雄<br>メール: <a
