--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
         <div id="displayId" class="id-display"></div>
         <div class="background">
             <div class="container main-content">
+                <div id="consent" class="consent mt-3" style="display: block;">
+                    <p>本研究ではアンケートへの回答をもってあなたの同意を得たものとさせていただきます。
+                        ただし、ご回答後でも、いつでも同意を撤回することが可能です。
+                        その場合はページ下部のメールアドレスにご連絡ください。</p>
+                    <p>詳細については、<a href="api/resources/Consent document.pdf" id="pdfLink">こちら</a>をご覧ください。</p>
+                </div>
                 <div class="instructions mt-3">
-                    <p>基本情報入力後，質問１から順番に回答してください</p>
+                    <p>基本情報入力後、質問１から順番に回答してください。</p>
                 </div>
                 <div id="buttonContainerTop" class="button-container mt-3"></div>
                 <div id="buttonContainerRest" class="button-container mt-3"></div>
