--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                         ただし、ご回答後でも、いつでも同意を撤回することが可能です。
                         その場合はページ下部のメールアドレスにご連絡ください。</p>
                     <p>詳細については、<a href="api/resources/Consent document.pdf" id="pdfLink">こちら</a>をご覧ください。</p>
+                    <iframe id="pdfViewer" style="width:100%; height:600px; display:none;"
+                        type="application/pdf"></iframe>
                 </div>
                 <div class="instructions mt-3">
                     <p>基本情報入力後、質問１から順番に回答してください。</p>
