--- a/index.html
+++ b/index.html
@@ -1,66 +1,108 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>広島大学-九州大学 アンケート調査サイト</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
 
-<body>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DNGR9F05QT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-DNGR9F05QT");
+    </script>
+  </head>
+
+  <body>
     <div class="header-banner">
-        <div class="organization-name">広島大学 / 九州大学</div>
-        <div class="site-content">アンケート調査</div>
-        <div class="research-title desktop-only">慢性的な痛みに対する心理・身体・脳からの多面的解明研究へ参加される皆様へ</div>
-        <div class="research-title mobile-only">慢性的な痛みに対する<br>心理・身体・脳からの<br>多面的解明研究へ参加<br>される皆様へ</div>
+      <div class="organization-name">広島大学 / 九州大学</div>
+      <div class="site-content">アンケート調査</div>
+      <div class="research-title desktop-only">
+        慢性的な痛みに対する心理・身体・脳からの多面的解明研究へ参加される皆様へ
+      </div>
+      <div class="research-title mobile-only">
+        慢性的な痛みに対する<br />心理・身体・脳からの<br />多面的解明研究へ参加<br />される皆様へ
+      </div>
     </div>
-    <div id="content" style="display:none;">
-        <div id="displayId" class="id-display"></div>
-        <div class="background">
-            <div class="container main-content">
-                <div id="consent" class="consent mt-3" style="display: block;">
-                    <p>本研究ではアンケートへの回答をもってあなたの同意を得たものとさせていただきます。
-                        ただし、ご回答後でも、いつでも同意を撤回することが可能です。
-                        その場合はページ下部のメールアドレスにご連絡ください。</p>
-                    <p>詳細については、<a href="api/resources/Consent document.pdf" id="pdfLink">こちら</a>をご覧ください。</p>
-                    <iframe id="pdfViewer" style="width:100%; height:600px; display:none;"
-                        type="application/pdf"></iframe>
-                </div>
-                <div class="instructions mt-3">
-                    <p>基本情報入力後、質問１から順番に回答してください。</p>
-                </div>
-                <div id="buttonContainerTop" class="button-container mt-3"></div>
-                <div id="buttonContainerRest" class="button-container mt-3"></div>
-            </div>
+    <div id="content" style="display: none">
+      <div id="displayId" class="id-display"></div>
+      <div class="background">
+        <div class="container main-content">
+          <div id="consent" class="consent mt-3" style="display: block">
+            <p>
+              本研究ではアンケートへの回答をもってあなたの同意を得たものとさせていただきます。
+              ただし、ご回答後でも、いつでも同意を撤回することが可能です。
+              その場合はページ下部のメールアドレスにご連絡ください。
+            </p>
+            <p>
+              詳細については、<a
+                href="api/resources/Consent document.pdf"
+                id="pdfLink"
+                >こちら</a
+              >をご覧ください。
+            </p>
+            <iframe
+              id="pdfViewer"
+              style="width: 100%; height: 600px; display: none"
+              type="application/pdf"
+            ></iframe>
+          </div>
+          <div class="instructions mt-3">
+            <p>基本情報入力後、質問１から順番に回答してください。</p>
+          </div>
+          <div id="buttonContainerTop" class="button-container mt-3"></div>
+          <div id="buttonContainerRest" class="button-container mt-3"></div>
         </div>
+      </div>
     </div>
-    <div id="developerSettings" style="display: none;">
-        <div class="developer-settings-content">
-            <h4>実験者用設定</h4>
-            <button id="newIdButton">新規ID取得</button>
-            <select id="idSelect">
-                <option>-</option>
-            </select>
-        </div>
+    <div id="developerSettings" style="display: none">
+      <div class="developer-settings-content">
+        <h4>実験者用設定</h4>
+        <button id="newIdButton">新規ID取得</button>
+        <select id="idSelect">
+          <option>-</option>
+        </select>
+      </div>
     </div>
 
     <div class="contact-info">
-        <h3>連絡先</h3>
-        <p>広島大学<br>
-            <span class="desktop-only">保健管理センター，脳・こころ・感性科学研究センター</span>
-            <span class="mobile-only">保健管理センター<br>脳・こころ・感性科学研究センター</span>
-            准教授 吉野敦雄<br>
-            メール: <a href="mailto:pain-psy@hiroshima-u.ac.jp">pain-psy@hiroshima-u.ac.jp</a>
-        </p>
+      <h3>連絡先</h3>
+      <p>
+        広島大学<br />
+        <span class="desktop-only"
+          >保健管理センター，脳・こころ・感性科学研究センター</span
+        >
+        <span class="mobile-only"
+          >保健管理センター<br />脳・こころ・感性科学研究センター</span
+        >
+        准教授 吉野敦雄<br />
+        メール:
+        <a href="mailto:pain-psy@hiroshima-u.ac.jp"
+          >pain-psy@hiroshima-u.ac.jp</a
+        >
+      </p>
     </div>
 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+  </body>
 </html>
