Adding google login details page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
           </div>
           <div class="instructions mt-3">
             <p>基本情報入力後、質問１から順番に回答してください。</p>
+            <p class="small-text">
+              各質問紙で『Googleにログインすると作業内容を保存できます』と表示されますが、ログインせずに進めていただいても問題ありません。
+              <br />
+              さらなる詳細については<a href="login-details.html">こちら</a
+              >をクリックしてください。
+            </p>
           </div>
           <div id="buttonContainerTop" class="button-container mt-3"></div>
           <div id="buttonContainerRest" class="button-container mt-3"></div>
