--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <p>
         広島大学<br />
         <span class="desktop-only"
-          >保健管理センター，脳・こころ・感性科学研究センター</span
+          >保健管理センター、脳・こころ・感性科学研究センター</span
         >
         <span class="mobile-only"
           >保健管理センター<br />脳・こころ・感性科学研究センター</span
