--- a/login-details.html
+++ b/login-details.html
@@ -21,7 +21,7 @@
       <div class="container main-content">
         <h1>Googleアカウントのログインについて</h1>
         <p>
-          本アンケートはgoogleフォームを利用しています。そのためgoogleアカウントのログイン状況によって表示が変わります。表示内容については下記をご参照ください。
+          本アンケートはgoogleフォームを使用しています。そのためgoogleアカウントのログイン状況によって表示が変わります。表示内容については下記をご参照ください。
         </p>
 
         <h2>『Googleにログインすると作業内容を保存できます』という表示</h2>
