Changes to the wording of the text

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               各質問紙で『Googleにログインすると作業内容を保存できます』と表示されますが、ログインせずに進めていただいても問題ありません。
               <br />
               さらなる詳細については<a href="login-details.html">こちら</a
-              >をクリックしてください。
+              >をご覧ください。
             </p>
           </div>
           <div id="buttonContainerTop" class="button-container mt-3"></div>
